# dooit-rs

./: Cargo.toml  README.md
dooit-rs/: Cargo.toml
dooit-rs/src/: main.rs
dooit-tasks/: Cargo.toml
dooit-tasks/src/: dirs.rs  lib.rs  tasks.rs
