[package]
name = "dooit-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.23", features = ["serde", "clock"] }
clap = { version = "4.0.32", features = ["derive", "env"] }
directories = "4.0.1"
lazy_static = "1.4.0"
serde = { version = "1.0.152", features = ["derive"] }
toml = "0.5.10"
dooit-tasks = { path = "../dooit-tasks" }
color-eyre = "0.6.2"
itertools = "0.10.5"
