[package]
name = "dooit-tasks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.23", features = ["serde", "clock"] }
clap = { version = "4.0.32", features = ["derive", "env"] }
directories = "4.0.1"
lazy_static = "1.4.0"
serde = { version = "1.0.152", features = ["derive"] }
toml = "0.5.10"

[dev-dependencies]
pretty_assertions = "1.3.0"
